fin rendu intermediaire